--- a/SalesAppV3/Infraestructure/Infraestructure.csproj
+++ b/SalesAppV3/Infraestructure/Infraestructure.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Repositories\ProveedorRepository.cs" />
     <Compile Include="Repositories\RAFContext.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Repositories\SupplierRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
